Reset System button, spacing fixes on settings, new registration closed message

--- a/assets/css/grad-project.css
+++ b/assets/css/grad-project.css
@@ -270,7 +270,7 @@ hr{
 	color: #ffffff;
 }
 
-.wsu_btn[disabled]:hover{
+.wsu_btn_danger[disabled]:hover{
 	background: #CC0000 !important;
 	color: #ffffff;
 }
